# raw_socket_sniffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  captured_handshake.cap  main.c
common/: Types.h  logger.c  logger.h  udp_sender.c  udp_sender.h  utils.c  utils.h
core/: managedMode.c  managedMode.h  mmapSniffer.c  mmapSniffer.h  monitorMode.c  monitorMode.h  packetParser.c  packetParser.h
layers/: ethernetLayer.c  ethernetLayer.h  networkLayer.c  networkLayer.h  transportLayer.c  transportLayer.h
layers/L2_DataLink/: ethernetLayer.c  ethernetLayer.h
layers/L3_Network/: networkLayer.c  networkLayer.h
layers/L4_Transport/: transportLayer.c  transportLayer.h
python/: app.py  data_listener.py  ui_renderer.py
socket/: rawSocket.c  rawSocket.h
